--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "*",
+        "dealerdirect/phpcodesniffer-composer-installer": "0.4.3",
         "php-mock/php-mock-phpunit": "^1",
         "wp-coding-standards/wpcs": "*"
     }
