--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "homepage": "https://klandestino.se",
     "license": "GPL-3.0+",
     "require": {
-        "php": ">=5.3.0"
+		"php": ">=5.3.0",
+		"guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "0.4.3",
