--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "0.4.3",
         "php-mock/php-mock-phpunit": "^1",
-        "wp-coding-standards/wpcs": "*"
+        "wp-coding-standards/wpcs": "*",
+		"lucatume/wp-browser": "*"
     }
 }
