--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     },
     "require-dev": {
         "php-mock/php-mock-phpunit": "^1",
-        "wp-coding-standards/wpcs": "*",
-		"lucatume/wp-browser": "*"
+        "wp-coding-standards/wpcs": "*"
     }
 }
